Add anime rating to model & JF plugin
